@@ -13,6 +13,7 @@
   </description>
 	<inceptionYear>2012</inceptionYear>
 
+  <url>http://mosser.github.com/mediation-portal</url>
 
 	<developers>
 		<developer>
@@ -127,8 +128,8 @@
 					<failIfMissing>true</failIfMissing>
 					<aggregate>true</aggregate>
 					<properties>
-						<projectname>SensApp</projectname>
-						<projecturl>http://sensapp.modelbased.net</projecturl>
+						<projectname>Mediation Portal</projectname>
+						<projecturl>http://mosser.github.com/mediation-portal</projecturl>
 						<organization>SINTEF ICT</organization>
 						<owner>Franck Chauvel</owner>
 						<year>${project.inceptionYear}</year>
@@ -203,6 +204,18 @@
 			</plugin>
 			<!-- Maven Site plugin, including the extension for Markdown syntax -->
 			<plugin>
+	<groupId>org.apache.maven.plugins</groupId>
+	<artifactId>maven-site-plugin</artifactId>
+	<version>3.1</version>
+	<dependencies>
+	  <dependency>
+	    <groupId>org.apache.maven.doxia</groupId>
+	    <artifactId>doxia-module-markdown</artifactId>
+	    <version>1.3</version>
+	  </dependency>
+	</dependencies>
+      </plugin>
+<!-- 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-site-plugin</artifactId>
 				<version>3.1</version>
@@ -238,7 +251,7 @@
 								<report>dependency-convergence</report>
 								<report>plugin-management</report>
 								<report>cim</report>
-								<!-- <report>issue-tracking</report> -->
+								<report>issue-tracking</report>
 								<report>scm</report>
 								<report>summary</report>
 							</reports>
@@ -269,7 +282,7 @@
 						</plugin>
 					</reportPlugins>
 				</configuration>
-			</plugin>
+			</plugin> -->
 
 			<!-- Maven Release plugin -->
 			<plugin>
@@ -279,7 +292,7 @@
 			</plugin>
 		</plugins>
 
-		<pluginManagement>
+		<!-- <pluginManagement>
 			<plugins>
 				<plugin>
 					<groupId>org.apache.maven.plugins</groupId>
@@ -290,11 +303,55 @@
 					</configuration>
 				</plugin>
 			</plugins>
-		</pluginManagement>
+		</pluginManagement> -->
 
 	</build>
 
-
+<reporting>
+    <plugins>
+      <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-project-info-reports-plugin</artifactId>
+        <version>2.4</version>
+	<configuration>
+								<dependencyDetailsEnabled>false</dependencyDetailsEnabled>
+								<dependencyLocationsEnabled>false</dependencyLocationsEnabled>
+								<argLine>-Xmx1024m -XX:MaxPermSize=512m</argLine>
+								<aggregate>true</aggregate>
+							</configuration>
+        <reportSets>
+          <reportSet>
+            <reports>
+	      <report>index</report>
+								<report>project-team</report>
+								<report>license</report>
+								<report>mailing-list</report>
+								<report>dependencies</report>
+								<report>dependency-convergence</report>
+								<report>plugin-management</report>
+								<report>cim</report>
+								<report>issue-tracking</report>
+								<report>scm</report>
+								<report>summary</report>
+            </reports>
+          </reportSet>
+        </reportSets>
+      </plugin>
+      <plugin>
+	<groupId>org.apache.maven.plugins</groupId>
+	<artifactId>maven-surefire-report-plugin</artifactId>
+	<version>2.12</version>
+      </plugin>
+      <plugin>
+	<groupId>org.scala-tools</groupId>
+	<artifactId>maven-scala-plugin</artifactId>
+	<version>2.15.2</version>
+	<configuration>
+	  <aggregate>true</aggregate>
+	</configuration>
+      </plugin>
+    </plugins>
+  </reporting>
 
 
 </project>
